<resources>
    <string name="app_name">Therapy Productivity Calculator</string>
    <string name="paid_meeting_travel">Paid Meeting/Travel</string>
    <string name="unpaid_break_lunch">Unpaid Break/Lunch</string>
    <string name="total_treatment_time">Total Treatment Time</string>
    <string name="minutes">Minutes</string>
    <string name="productivity">Productivity</string>
    <string name="start_time">Start Time</string>
    <string name="set_productivity">Productivity %</string>
    <string name="end_time">End Time</string>
    <string name="paid_time">Paid Time</string>
    <string name="unpaid_break">Unpaid Break</string>
    <string name="meeting_travel">Meeting/Travel</string>
    <string name="textview">TextView</string>
    <string name="button">Button</string>
    <string name="time">Time</string>
    <string name="_90">90%</string>
    <string name="calculate_time_stamp">Create Time Card</string>
    <string name="no_history">No History</string>
    <string name="sad_face">sad face</string>
    <string name="list_item_date">Date</string>
    <string name="list_item_start">Start Time</string>
    <string name="list_item_paid">Paid Time</string>
    <string name="placeholder">TextView</string>
    <string name="main_menu_settings">Settings</string>
    <string name="main_menu_history">History</string>
    <string name="main_menu_help">Help</string>
    <string name="time_card_menu_save">Save</string>
    <string name="history_menu_clear">Clear</string>

    <string name="hello_blank_fragment">Are you sure you want to clear your history?</string>
    <string name="treatment_time_time_card">Treatment Time</string>
    <string name="title_activity_history_time_card">HistoryTimeCardActivity</string>
    <string name="delete_history_item">delete</string>
    <string name="delete_this_time_card">Delete this time card?</string>
    <string name="button_toolbar">Button</string>
    <string name="change_log">Welcome to Version 2.1 of the Therapy Productivity Calculator! Here are a list of the key changes:\n
    -Times can be entered as minutes or HH:MM\n
    -Dark theme available in settings\n
    -With PDPM, I have received input to offer concurrent/group options. Personally, I just add up all treatment time (since all minutes are now seen as individual per CMS) to get my time card.\n
    -Therefore, I have opted to not add specific concurrent or group options.\n
    -If you have suggestions for how to implement concurrent/group into the app, let me know! (Help > Send Feedback)\n
    -Enjoy!</string>
    <string-array name="group">
        <item>System Default</item>
        <item>On</item>
        <item>Off</item>

    </string-array>
    <string-array name="patient_size">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    
    <string name="dark_mode_key">Dark Mode Key</string>
    <string name="stats_fragment_hours_worked">Total Paid Time: %1$d hrs %2$d mins</string>
    <string name="stats_fragment_average_productivity">Average Productivity: %1$s%% </string>
    <string name="history_paid_time">Paid Time: %1$s </string>
    <string name="history_new_productivity">%1$s%%</string>
    <string name="history_new_travel_time">%1$d mins</string>

</resources>