<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/txtViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:text="@string/start_time"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textSize="14sp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/txtViewStartTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="48dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:text="@string/time"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                android:textSize="48sp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/txtViewTitle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:text="@string/productivity"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textSize="14sp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/txtViewProductivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="48dp"
                android:background="?attr/selectableItemBackgroundBorderless"

                android:text="@string/_90"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                android:textSize="48sp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/txtViewTitle3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:text="@string/minutes"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textSize="14sp"
                android:visibility="visible" />

            <EditText
                android:id="@+id/txtTreatmentMinutes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/total_treatment_time"
                android:inputType="number"
                android:text=""
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/txtUnpaidMins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/unpaid_break_lunch"
                android:inputType="number"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/txtPaidMins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/paid_meeting_travel"
                android:inputType="number"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="italic" />

        </LinearLayout>
    </ScrollView>

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        android:visibility="gone"
        app:contentInsetStart="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">


            <Button
                android:id="@+id/txtToolbarStart"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:minWidth="0dp"

                android:text="@string/start_time"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <Button
                android:id="@+id/txtToolbarProd"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:minWidth="0dp"

                android:text="@string/productivity"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <Button
                android:id="@+id/txtToolbarTreat"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:minWidth="0dp"

                android:text="@string/minutes"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

        </LinearLayout>

    </android.support.v7.widget.Toolbar>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"
        android:background="@drawable/ripple_button"
        android:elevation="2dp"

        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/calculate_time_stamp"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>